beta-jellyfin/loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: jellyfin
  name: jellyfin
spec:
  ports:
  - name: "8096"
    port: 8096
    protocol: TCP
    targetPort: 8096
  selector:
    app: jellyfin
  type: LoadBalancer
status:
  loadBalancer: {}
